--- a/lamtq_b23dccn480_training_gd1/week1/Frontend-web/index.html
+++ b/lamtq_b23dccn480_training_gd1/week1/Frontend-web/index.html
@@ -7,71 +7,10 @@
     <title>Trang Giới Thiệu Cá Nhân</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <style>
-        header{
-            background: linear-gradient(135deg, #FFD478, #80796A);
-            color: white;
-            padding: 20px 0;
-        }
-        footer{
-            background: #80796A;
-            color: white;
-            padding: 20px 0;
-        }
-
-        header h1 {
-            font-weight: 700;
-            letter-spacing: 1px;
-        }
-
-        header p.lead {
-            font-size: 1.2rem;
-        }
-
-        aside,
-        main {
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        aside:hover,
-        main:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-        }
-
-        .t-h4-color {
-            color: #332811;
-        }
-
-        .ic-ig-color {
-            color: #E1306C;
-        }
-
-        .list-group-item {
-            border-radius: 0.5rem;
-            margin-bottom: 5px;
-            transition: background 0.3s;
-        }
-
-        .list-group-item:hover {
-            background: #f0f0f0;
-        }
-
-        ul.list-unstyled li a {
-            display: inline-block;
-            transition: transform 0.2s, box-shadow 0.2s;
-            border-radius: 5px;
-            padding: 3px 6px;
-        }
-
-        ul.list-unstyled li a:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-        }
-    </style>
     <!-- Header -->
     <header class="text-white text-center py-3">
         <div class="container">
